# campfire

./: README.md  biome.json  package.json  wrangler.jsonc
rs-worker/: Cargo.toml  wrangler.toml
rs-worker/migrations/: 0001_init.sql
rs-worker/src/: lib.rs  model.rs  service.rs
rs-worker/src/model/: ember.rs  footstep.rs  general.rs  logbook.rs  mod.rs  session.rs  user.rs
rs-worker/src/repository/: embers.rs  logs.rs  mod.rs  sessions.rs  users.rs
rs-worker/src/service/: auth.rs  embers.rs  general.rs  logbook.rs  mod.rs  users.rs
src/: app.html  service-worker.ts
src/lib/: NoteInputField.svelte  ThemeToggle.svelte
src/lib/api/: auth.ts  client.ts  embers.ts
src/lib/auth/: LoginModal.svelte
src/lib/components/: MobileBack.svelte  MobileBar.svelte  SyncTestButton.svelte
src/lib/components/embers/: DesktopEmbers.svelte  EmberCard.svelte  EmberPlusCard.svelte  MobileEmbers.svelte
src/lib/components/footsteps/: AddAndClear.svelte  AddStep.svelte  ClearCompleted.svelte  Step.svelte  StepCard.svelte
src/lib/db/: embers.ts  footsteps.ts  logbook.ts  porter.ts  types.ts
src/lib/footsteps/: Step.svelte
src/lib/icons/: BackIcon.svelte  CheckIcon.svelte
src/lib/navigation/: NavBar.svelte  NavTab.svelte  SettingsMenu.svelte  SettingsTab.svelte
src/lib/sync/: emberMappers.ts  embers.ts
src/lib/types/: step.type.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/embers/: +page.svelte
src/routes/embers/[id]/: +page.svelte
src/routes/footsteps/: +page.svelte
src/routes/logbook/: +page.svelte
static/: manifest.webmanifest
(+5 files in other folders)
