[package]
name = "rs-worker"
version = "0.1.0"
edition = "2021"
authors = ["Mishi <mishi.beraia@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'd1'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["js", "v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
getrandom = { package = "getrandom", version = "0.2.17", features = ["js"] }
sha2 = "0.11.0"
hex = "0.4.3"
